# Auto-Uplifting

./: .env.example  .gitignore  Current Report for BT5153.md  README.md  TODOS.md  _build_nb.py  campaign.py  human_baseline_uplift.ipynb  main.py  pyproject.toml  requirements.txt  run_pipeline.py  teammate-aligned-uplift-roadmap.md
configs/: models.yaml  project.yaml  search.yaml  seed_ideas.json
data/seeds/: preprocessing_seeds.jsonl
demos/: uplift_build_features.py  uplift_cross_validate_champion.py  uplift_cross_validate_validation_topk.py  uplift_evaluate_trial.py  uplift_execute_tuning_plan.py  uplift_explainability_report.py  uplift_generate_tuning_plan.py  uplift_run_autonomous_pipeline.py  uplift_run_baselines.py  uplift_validate_dataset.py
docs/architecture/: current-state.md
docs/changes/: implementation-log.md
docs/plans/: 2026-03-17-phase1-implementation-plan.md  2026-03-20-phase3-principled-refinement.md  2026-03-20-phase4a-campaign-orchestrator.md  2026-03-21-phase4b-preprocessing-agent.md  2026-03-30-ecommerce-feature-engineering-design.md  2026-03-30-phase5-feature-engineering.md  2026-05-01-holdout-leakage-remediation.md
notebooks/: bt5153_autonomous_pipeline_demo.ipynb
phase 2: experiment/: feature_engineer_execution.md  hypothesis_reasoning.md  trial_spec_writer.md  uplift_strategy_selection.md
phase 2: experiment/skills/: case_retrieval.md
phase_1_data_ingestion_preprocessing/: data_ingestion_agent.ipynb  data_preprocessing_agent.ipynb
phase_2_experiment/: experiment_planning.py  grp_project_pipeline.ipynb
prompts/: distiller.md  ideator.md  preprocessing_agent.md  refiner.md  reviewer.md  selector.md
prompts/feature_engineering/: feature_codegen.md  feature_codegen_guardrail.md  feature_engineer_full.md  feature_engineer_router.md  feature_leakage_audit.md
references/feature_engineering/: ecommerce_features.md  leakage_patterns.md
results/run_20260430_best/: README.md  agentic_tuning_execution_summary.json  agentic_tuning_ledger.jsonl  agentic_tuning_plan.json  agentic_tuning_plan_validation_only.json  agentic_tuning_validation_only_execution_summary.json  agentic_tuning_validation_only_ledger.jsonl  final_report.md  honest_human_vs_autolift_cv_comparison.csv  honest_human_vs_autolift_cv_comparison.md  tuned_submission_summary.json  tuned_xai_summary.json  validation_top3_cv_audit.md  validation_top3_cv_leaderboard.csv
scripts/: download_demo_data.py
src/: session.py
src/agents/: feature_engineer.py  ideator.py  preprocessing_agent.py  refiner.py
src/features/: dsl.py  (+6 more)
tests/: test_pyproject_dependencies.py  test_result_parser.py  test_session.py
(+135 files in other folders)
